--- a/radio/rild_dsds.rc
+++ b/radio/rild_dsds.rc
@@ -1,23 +1,15 @@
 # Copyright (C) 2015 The Android Open Source Project
-# Copyright (C) 2017 The LineageOS Project
+# Copyright (C) 2020 The LineageOS Project
 #
 # IMPORTANT: Do not create world writable files or directories.
 # This is a common source of Android security bugs.
 #
 
 # for multi rild
-service ril-daemon1 /vendor/bin/hw/rild -l /vendor/lib/libsec-ril-dsds.so -c 2
+service ril-daemon2 /vendor/bin/hw/rild -l /vendor/lib/libsec-ril-dsds.so -c 2
     class main
     user radio
-    disabled
-    group radio cache inet misc audio log readproc wakelock oem_2901
+    group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
-# CP2
-service cpboot-daemon /sbin/cbd -d -p 22
-    class main
-    user root
-    group radio cache inet misc audio sdcard_rw log sdcard_r
-    seclabel u:r:cbd:s0
-    onrestart restart ril-daemon1
 
