--- a/radio/rild_dsds.rc
+++ b/radio/rild_dsds.rc
@@ -14,7 +14,7 @@ service ril-daemon1 /vendor/bin/hw/rild -l /vendor/lib/libsec-ril-dsds.so -c 2
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 # CP2
-service cpboot-daemon /sbin/cbd -d -p 22
+service cpboot-daemon /vendor/bin/cbd -d -p 22
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r
